--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,34 @@
-<p>grafica1 works!</p>
+<div class="row">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <app-grafico-donna [grafico]="graficos.grafico1"></app-grafico-donna>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+<app-grafico-donna [grafico]="graficos.grafico2"></app-grafico-donna>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+<app-grafico-donna [grafico]="graficos.grafico3"></app-grafico-donna>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+<app-grafico-donna [grafico]="graficos.grafico4"></app-grafico-donna>
+      </div>
+    </div>
+  </div>
+
+</div>
