--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,38 @@
-<p>progress works!</p>
+<div class="row">
+      <div class="col-12">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Barra de progreso</h4>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.ariaValuenow]="progreso1" aria-valuenow="75"
+                aria-valuemin="0" aria-valuemax="100" style="width: 75%" [style.width]="progreso1 + '%'"></div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
+                [attr.ariaValuenow]="progreso2" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                style="width: 75%" [style.width]="progreso2 + '%'"></div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="col-6">
+        <div class="card">
+          <div class="card-body">
+            <app-incrementador leyenda="Progress Azul" [progreso]="progreso1" (cambioValor)="progreso1 = $event"></app-incrementador>
+          </div>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="card">
+          <div class="card-body">
+            <app-incrementador leyenda="Progress Rojo" [progreso]="progreso2" (cambioValor)="progreso2 = $event"></app-incrementador>
+          </div>
+        </div>
+      </div>
+    </div>
