--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
               <li><a href="javascript:void()">My Profile </a></li>
               <li><a href="javascript:void()">My Balance</a></li>
               <li><a href="javascript:void()">Inbox</a></li>
-              <li><a href="javascript:void()">Account Setting</a></li>
+              <li><a [routerLink]="['/account-settings']" routerLinkActive="active" >Account Setting</a></li>
               <li><a [routerLink]="['/login']">Logout</a></li>
             </ul>
           </li>
