--- a/src/app/login/register.component.html
+++ b/src/app/login/register.component.html
@@ -4,36 +4,41 @@
   style="background-image:url(assets/images/background/login-register.jpg);">
   <div class="login-box card">
     <div class="card-body">
-      <form class="form-horizontal form-material" id="loginform" action="index.html">
+      <form ngNativeValidate class="form-horizontal form-material" id="loginform" [formGroup]="forma" (ngSubmit)="registrarUsuario()">
         <a href="javascript:void(0)" class="text-center db">
           <img src="assets/images/logo-icon.png"
             alt="Home" /><br /><img src="assets/images/logo-text.png" alt="Home" /></a>
-        <h3 class="box-title m-t-40 m-b-0">Register Now</h3>
+        <h3 class="box-title m-t-40 m-b-0">Registrar Ahora</h3>
         <small>Create your account and enjoy</small>
         <div class="form-group m-t-20">
           <div class="col-xs-12">
-            <input class="form-control" type="text" required="" placeholder="Name">
+            <input class="form-control" type="text" required placeholder="Name" formControlName="nombre">
           </div>
         </div>
         <div class="form-group ">
           <div class="col-xs-12">
-            <input class="form-control" type="text" required="" placeholder="Correo electronico">
+            <input class="form-control" type="text" required placeholder="Correo electronico" formControlName="correo">
           </div>
         </div>
         <div class="form-group ">
           <div class="col-xs-12">
-            <input class="form-control" type="password" required="" placeholder="Contrasena">
+            <input class="form-control" type="password" required placeholder="Contrasena" formControlName="password">
           </div>
         </div>
         <div class="form-group">
           <div class="col-xs-12">
-            <input class="form-control" type="password" required="" placeholder="Confirm Password">
+            <input class="form-control" type="password" required placeholder="Confirm Password" formControlName="password2">
           </div>
         </div>
+
+        <div class="form-group" *ngIf="forma.errors?.sonIguales && !forma.pristine">
+          <p class="text-danger">Las contrasenas deben ser iguales</p>
+        </div>
+
         <div class="form-group row">
           <div class="col-md-12">
             <div class="checkbox checkbox-primary p-t-0">
-              <input id="checkbox-signup" type="checkbox">
+              <input id="checkbox-signup" type="checkbox" formControlName="condiciones">
               <label for="checkbox-signup"> Estoy acuerdo con los terminos <a href="#">Terms</a></label>
             </div>
           </div>
