--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
 
           <li *ngFor="let menu of _sidebar.menu">
             <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i
-                [class]="menu.icono"></i><span class="hide-menu">Dashboard <span
+                [class]="menu.icono"></i><span class="hide-menu">{{ menu.titulo }} <span
                   class="label label-rouded label-themecolor pull-right">{{ menu.submenu.length }}</span></span></a>
             <ul aria-expanded="false" class="collapse">
               <li *ngFor="let submenu of menu.submenu"><a [routerLink]="[submenu.url]" routerLinkActive="active">{{ submenu.titulo }} </a></li>
