--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,15 @@
 .w150{
   width: 150px;
 }
+.fondo-negro{
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+}
+.oculto {
+  display: none;
+}
